--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,11 +11,11 @@
     
     <string name = "email">Email</string>
     <string name = "login">Login</string>
-    <string name ="signup">New user? Sign Up</string>
+    <string name ="signup">Sign Up</string>
     <string name = "confirm_password">confirm password</string>
     <string name="api_base">http://tapitout.herokuapp.com/</string>
     <string name = "balance">Balance</string>
-    <string name = "howMuch">How much do you wish to send</string>
+    <string name = "howMuch">How much do you wish to send?</string>
     <string name = "ok">OK!</string>
     <string name = "cancel">Cancel</string>
     <string name = "money">$</string>
@@ -27,6 +27,7 @@
 	<color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="slate">#6D7B8D</color>
+    <color name="ltblue">#ADD8E6</color>
     
 
 </resources>
