--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="menu_settings">Android TapItOut settings</string>
     <string name="button_addcard">Add Payment Method</string>
     <string name="button_transaction">Make A Transaction</string>
-    <string name="button_quit">LEAVE THIS PLACE</string>
+    <string name="button_quit">Log Out</string>
     <string name= "password">Password</string>
     <string name = "name">Name</string>
     
